--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,7 +61,7 @@ nav a {
 }
 h1, h2 {
     background-color: var(--primary);
-    color: var(--header);
+    color: var(--text);
     padding: 10px;
     text-align: center;
     font-size: xx-large;
@@ -84,6 +84,7 @@ h1, h2 {
     background-color: var(--primary);
     padding: 5px;
     font-size: larger;
+    color: var(--text);
 }
 button.answers {
     width: 100%;
@@ -105,7 +106,7 @@ main.score button {
 h2 {
 background-color: var(--primary);
 text-align: center;
-color: var(--header);
+color: var(--text);
 }
 
 li {
